--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="left-section">
         <img class="hamburger-menu" src="icons/hamburger-menu.svg">
-        <a href=https://map.bayssquad.com>
+        <a href=https://map.bayssquad.com target="_blank">
           <img class="youtube-logo" src="icons/youtube-logo.svg">
         </a>
       </div>
@@ -46,7 +46,9 @@
           <div class="notifications-count">3</div>
           <div class="tooltip">Notifications</div>
         </div>
-        <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
+        <a href="thumbnails/hee.jpg" target="_blank">
+          <img class="current-user-picture" src="channel-pictures/my-channel.jpeg">
+      </a>
       </div>
     </header>
 
@@ -81,19 +83,21 @@
       <section class="video-grid">
         <div class="video-preview">
           <div class="thumbnail-row">
-            <img class="thumbnail" src="thumbnails/thumbnail-1.webp">
+            <img class="thumbnail" src="thumbnails/image_spy.png">
             <div class="video-time">14:20</div>
           </div>
           <div class="video-info-grid">
             <div class="channel-picture">
-              <img class="profile-picture" src="channel-pictures/channel-1.jpeg">
+              <a href="channel-pictures/Snapchat-1768248086.jpg">
+                <img class="profile-picture" src="channel-pictures/Snapchat-1768248086.jpg">
+              </a>
             </div>
             <div class="video-info">
               <p class="video-title">
-                Talking Tech and AI with Google CEO Sundar Pichai!
+                8/11 Preperations
               </p>
               <p class="video-author">
-                Marques Brownlee
+                Mark Ass White Lee
               </p>
               <p class="video-stats">
                 3.4M views &#183; 6 months ago
@@ -104,19 +108,19 @@
 
         <div class="video-preview">
           <div class="thumbnail-row">
-            <img class="thumbnail" src="thumbnails/thumbnail-2.webp">
+            <img class="thumbnail" src="thumbnails/1200x1200bb.png">
             <div class="video-time">8:22</div>
           </div>
           <div class="video-info-grid">
             <div class="channel-picture">
-              <img class="profile-picture" src="channel-pictures/channel-2.jpeg">
+                <img class="profile-picture" src="channel-pictures/Snapchat-1634410806.jpg">
             </div>
             <div class="video-info">
               <p class="video-title">
                 Try Not To Laugh Challenge #9
               </p>
               <p class="video-author">
-                Markiplier
+                White car
               </p>
               <p class="video-stats">
                 19M views &#183; 4 years ago
@@ -127,19 +131,21 @@
 
         <div class="video-preview">
           <div class="thumbnail-row">
-            <img class="thumbnail" src="thumbnails/thumbnail-3.webp">
+            <img class="thumbnail" src="thumbnails/4jzkg9.png">
             <div class="video-time">9:13</div>
           </div>
           <div class="video-info-grid">
             <div class="channel-picture">
-              <img class="profile-picture" src="channel-pictures/channel-3.jpeg">
+              <a href="channel-pictures/IMG_0080.jpg">
+                <img class="profile-picture" src="channel-pictures/IMG_0080.jpg">
+              </a>
             </div>
             <div class="video-info">
               <p class="video-title">
-                Crazy Tik Toks Taken Moments Before DISASTER
+                "Lizanje" - Pogovor s steno part 3 (podcast) 
               </p>
               <p class="video-author">
-                SSSniperWolf
+                Polagalka refinerane nafte
               </p>
               <p class="video-stats">
                 12M views &#183; 1 year ago
